<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sumeesh.hw1.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Label_UTC"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editTextHours"
        android:layout_alignTop="@+id/textView"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginStart="40dp"
        android:maxLength="2"
        android:hint="@string/editText_Hours_Label"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Label_Colon"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:layout_toStartOf="@+id/editTextMinutes"
        android:layout_alignBottom="@+id/textView"
        android:layout_toLeftOf="@+id/editTextMinutes" />

    <EditText
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editTextMinutes"
        android:layout_alignTop="@+id/editTextHours"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:maxLength="2"
        android:hint="@string/editText_Min_Label"
        android:textSize="30sp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label_buttonRadio"
        android:id="@+id/switchButtonRadio"
        android:layout_below="@+id/editTextHours"
        android:textSize="30sp"
        android:checked="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_EST"
        android:id="@+id/buttonEST"
        android:layout_below="@+id/switchButtonRadio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_CST"
        android:id="@+id/buttonCST"
        android:layout_below="@+id/buttonEST"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_MST"
        android:id="@+id/buttonMST"
        android:layout_below="@+id/buttonCST"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_PST"
        android:id="@+id/button_PST"
        android:layout_below="@+id/buttonMST"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ClearAll"
        android:id="@+id/button_ClearAll"
        android:layout_below="@+id/button_PST"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewResult"
        android:layout_below="@+id/switchButtonRadio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/Result_Label"
        android:textSize="25sp"
        android:text="@string/textView_Result_Label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_Label_PreviousDay"
        android:id="@+id/textView_PrevDay"
        android:textColor="#ff0000"
        android:textSize="25sp"
        android:layout_below="@+id/switchButtonRadio"
        android:layout_alignRight="@+id/buttonEST"
        android:layout_alignEnd="@+id/buttonEST" />

</RelativeLayout>
